--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Maps that Matter. All rights reserved. Design: Nicholas Perdue | Department of Geography | Humboldt State University </p>
+						<p>Intro to Cartography. All rights reserved. Design: Josselyn Adema| Humboldt State University </p>
 					</footer>
 
 			</div>
