--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 				<!-- Main -->
 					<section id="main">
 
-						<!-- Thumbnails -->
+						 Thumbnails 
 							<section class="thumbnails">
-								<!-- <div>
-									<a href="images/police_map.png">
-										<img src="images/police_map.png" alt="" />
-										<h3>Police Shooting In United States</h3>
-									</a>
+								 <div>
+									<a href="images/Illinois.png">
+										<img src="images/Illinois.png" alt="" />
+										<h3>The State of Illinois and its Counties</h3>
+								<!--	</a>
 									<a href="images/Oilspills_map.png">
 										<img src="images/Oilspills_map.png" alt="" />
 										<h3>Crude Oil Spills</h3>
