--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</header>
 
 				     Main 
-					<section id="main">
+					<!--<section id="main">-->
 
 						 Thumbnails 
 							<section class="thumbnails">
@@ -35,15 +35,15 @@
 										<img src="images/Illinois.png" alt="" />
 										<h3>The State of Illinois and its Counties</h3>
 									</a>
-								<!--	<a href="images/Oilspills_map.png">
-										<img src="images/Oilspills_map.png" alt="" />
-										<h3>Crude Oil Spills</h3>
-									</a>
+									<a href="images/China6_github.png">
+										<img src="images/China6_github.png" alt="" />
+										<h3>China Projected in 6 Coordinate Systems</h3>
+									<!-- </a>
 									<a href="images/Carpet.png">
 										<img src="images/Carpet.png" alt="" />
 										<h3>PDX Carpet</h3>
 									</a>
-								</div> -->
+								</div> 
 								<!-- <div>
 									<a href="images/States_map.png">
 										<img src="images/States_map.png" alt="" />
