--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<!--<section id="main">-->
 
 						 Thumbnails 
-							<section class="thumbnails">
+							<!-- <section class="thumbnails">-->
 								 <div>
 									<a href="images/Illinois.png">
 										<img src="images/Illinois.png" alt="" />
@@ -42,7 +42,7 @@
 									<a href="images/Carpet.png">
 										<img src="images/Carpet.png" alt="" />
 										<h3>PDX Carpet</h3>
-									</a>
+									</a> -->
 								</div> 
 								<!-- <div>
 									<a href="images/States_map.png">
