--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<!--<section id="main">-->
 
 						 Thumbnails 
-							<!-- <section class="thumbnails">-->
+							 <section class="thumbnails">
 								 <div>
 									<a href="images/Illinois.png">
 										<img src="images/Illinois.png" alt="" />
