--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 						</ul>
 					</header>
 
-				     Main 
+				    <!-- Main--> 
 					<!--<section id="main">-->
 
-						 Thumbnails 
+						<!-- Thumbnails -->
 							 <section class="thumbnails">
 								 <div>
 									<a href="images/Illinois.png">
