--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								</div> 
 								 <div>
 									<a href="Minnesota.png">
-										<img src="Minnesota" alt="" />
+										<img src="Minnesota.png" alt="" />
 										<h3>A map showing the cities, roads, lakes, and rivers of Minnesota</h3>
 									<!-- </a>
 									<a href="images/Coastline_map.png">
