--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 									<a href="Minnesota.png">
 										<img src="images/Minnesota.png" alt="" />
 										<h3>A map showing the cities, roads, lakes, and rivers of Minnesota</h3>
-									 </a>
-									<!--<a href="images/Coastline_map.png">
+									<!-- </a>
+									<a href="images/Coastline_map.png">
 										<img src="images/Coastline_map.png" alt="" />
 										<h3>Louisiana Coastline</h3>
 									</a>
