--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 									</a>
 								</div> -->
 							</section>
-						 <div> 
+						 <!-- <div> 
 						<iframe width="100%" height="800px" src="https://humboldtstate.maps.arcgis.com/apps/MapJournal/index.html?appid=ac063e33cf224df3bb8af662d8165ef0" frameborder="0" scrolling="no"></iframe>
 								<h3>Top 7 and Bottom 6 MLB Stadiums: According to Baseball Digest</h3>
 								<p>Murals and Artist of the Famous Balmy Alley in the Mission District</p>
 						
-						</div> 
+						</div> --> 
 					</section>
 
 				<!-- Footer -->
