--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</section>
 						  <div> 
 						<iframe width="100%" height="800px" src="https://humboldtstate.maps.arcgis.com/apps/MapJournal/index.html?appid=ac063e33cf224df3bb8af662d8165ef0" frameborder="0" scrolling="no"></iframe>
-								<h3>Top 7 and Bottom 6 MLB Stadiums: According to Baseball Digest   Source: https://ballparkdigest.com/2019/04/18/best-of-the-ballparks-mlb-rankings-2019/</h3>
+								<h3>Top 7 and Bottom 6 MLB Stadiums: According to Baseball Digest   Source:Best of the Ballparks MLB Rankings: 2019 by Kevin Reichard, April 18, 2019 </h3>
 								
 						
 						</div>  
